chore: faster build system
Previous build system with Nix required compiling the whole nginx every
time.

This adds nginx as a git submodule.

--- a/nix/conf/nginx.conf
+++ b/nix/conf/nginx.conf
@@ -1,6 +1,8 @@
 daemon off;
 pid        ./nginx.pid;
 
+load_module ../nginx/objs/pathological_module.so;
+
 events {}
 
 http {
@@ -12,6 +14,10 @@ http {
 
     location /pathological {
       pathological;
+    }
+
+    location /_.gif {
+      empty_gif;
     }
   }
 }
