--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,8 +8,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: true
       - uses: cachix/install-nix-action@v27
         with:
           nix_path: nixpkgs=channel:nixos-unstable
+      - name: Build submodule
+        run: nix-shell --run "make"
       - name: Run tests
-        run: nix-shell --run "ngx-test"
+        run: nix-shell --run "make test"
